Fix title offset

--- a/BGpt/static/BGpt/styles.scss
+++ b/BGpt/static/BGpt/styles.scss
@@ -314,7 +314,7 @@ body{
 #lang-container > * {
     font-size: large;
 }
-#chat-title{
+#chat-title-inp{
     max-width: 50%;
     margin-left: 25%;
 }
