incorrect nesting in slide animation

--- a/BGpt/templates/BGpt/history.html
+++ b/BGpt/templates/BGpt/history.html
@@ -81,7 +81,7 @@
           <!-- <a href="{% url 'history' user.id %}" class="btn btn-sec">View Full history</a> -->
           <!-- <button type="button" class="btn btn-sec" data-bs-dismiss="modal">Close</button> -->
           <!-- <button type="button" class="btn btn-prim">Save changes</button> -->
-          Buttons are here:
+            <button type="button" class="btn btn-sec" id="delete" data-bs-dismiss="modal">Delete</button>
             <button type="button" class="btn btn-sec cancel" id="save" data-bs-dismiss="modal">Save</button>
             <button type="button" class="btn btn-sec cancel" data-bs-dismiss="modal">Cancel</button>
         </div>
